--- a/Texture/CMakeLists.txt
+++ b/Texture/CMakeLists.txt
@@ -7,6 +7,7 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
 #指定库文件所在文件夹路径：
 link_directories(${PROJECT_SOURCE_DIR}/lib)
 
+#add_executable(openGL TestGLM.cpp)
 add_executable(openGL main.cpp src/glad.c src/Shader.cpp src/Shader.h src/stb_image.h)
 target_link_libraries(openGL -lopengl32 ${PROJECT_SOURCE_DIR}/lib/glfw3.dll )
 
